# shot-bot

./: .gitignore  Cargo.toml  README.md  deploy
src/: handler.rs  main.rs
src/adapters/: db.rs
src/commands/: general.rs  mod.rs  shots.rs
src/hooks/: counter.rs
